Fix container overflow

--- a/docs/css/react.scss
+++ b/docs/css/react.scss
@@ -69,6 +69,7 @@ html {
 .container {
   padding-top: $navHeight;
   width: 100%;
+  overflow: hidden;
 }
 
 .wrap {
